# AntSimulation

./: .gitignore  Cargo.toml  readme.md
graphics/: Cargo.toml
graphics/src/: bin.rs  colors.rs  render.rs
sim/: Cargo.toml
sim/src/: ant.rs  ant_settings.rs  bin_test.rs  colony.rs  lib.rs  pheromone.rs  resource.rs  world.rs
src/: Render.rs  ant_settings.rs  bin.rs  lib.rs  render.rs  world.rs
src/sim/: ant.rs  colony.rs  mod.rs  pheromone.rs  resource.rs  world.rs
