[package]
name = "Ants"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ant_lib"
path = "src/lib.rs"

[[bin]]
name = "ants"
path = "src/bin.rs"

[dependencies]
rand = "0.7.3"
ggez = "0.5.1"